--- a/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
@@ -2,7 +2,7 @@
 .stdimage .item-preview {
     position: relative;
     overflow: hidden;
-    margin-bottom: 5px;
+    margin: 5px 0;
     box-shadow: 1px 1px 3px #808080;
 }
 .stdimage .item-preview img {
