--- a/src/apps_common/paginator/templates/paginator/paginator.html
+++ b/src/apps_common/paginator/templates/paginator/paginator.html
@@ -1,31 +1,32 @@
+{% load i18n %}
 {% load paginator %}
 
 <div class="navigation">
+    {% if not page.has_next %}
+        <span class="nav-item next-item {% if not page.has_next %}active{% endif %}">{% trans 'Next' %} →</span>
+    {% else %}
+        <a href="{% href paginator page.next_page_number %}"
+           class="nav-item next-item link {% if not page.has_next %}active{% endif %}"
+           data-page="{{ page.next_page_number }}">{% trans 'Next' %} →</a>
+    {% endif %}
+
     {% if not page.has_previous %}
-        <span class="item link {% if not page.has_previous %}active{% endif %}">←</span>
+        <span class="nav-item prev-item {% if not page.has_previous %}active{% endif %}">← {% trans 'Previous' %}</span>
     {% else %}
         <a href="{% href paginator page.previous_page_number %}"
-           class="item link {% if not page.has_previous %}active{% endif %}"
-           data-page="{{ page.previous_page_number }}">←</a>
+           class="nav-item prev-item link {% if not page.has_previous %}active{% endif %}"
+           data-page="{{ page.previous_page_number }}">← {% trans 'Previous' %}</a>
     {% endif %}
-    
+
     {% for page_num in paginator.zipped_page_range %}
         {% if page_num == None %}
-            <span class="item">...</span>
+            <span class="item zip-item">...</span>
         {% elif page.number == page_num %}
             <span class="item link active">{{ page_num }}</span>
         {% else %}
-            <a href="{% href paginator page_num %}" 
+            <a href="{% href paginator page_num %}"
                class="item link {% if page.number == page_num %}active{% endif %}"
                data-page="{{ page_num }}">{{ page_num }}</a>
         {% endif %}
     {% endfor %}
-    
-    {% if not page.has_next %}
-        <span class="item link {% if not page.has_next %}active{% endif %}">→</span>
-    {% else %}
-        <a href="{% href paginator page.next_page_number %}"
-           class="item link {% if not page.has_next %}active{% endif %}"
-           data-page="{{ page.next_page_number }}">→</a>
-    {% endif %}
 </div>
