--- a/src/apps_common/paginator/static/paginator/scss/paginator.scss
+++ b/src/apps_common/paginator/static/paginator/scss/paginator.scss
@@ -2,28 +2,32 @@
 
 .navigation {
   text-align: center;
+  @include clearfix;
+
+  .nav-item {
+    &.next-item {
+      float: right;
+    }
+
+    &.prev-item {
+      float: left;
+    }
+
+    &.active {
+      color: #E5E5E5;
+    }
+  }
 
   .item {
-    float: left;
-    color: #F2AE30;
     padding: 0 10px;
-    min-width: 14px;
-    margin: 0 5px 0 0;
-    line-height: 24px;
-    text-align: center;
-  }
+    margin: 0 8px;
+    @include media(mobile, tablet) {
+      padding: 0 8px;
+      margin: 0 6px;
+    }
 
-  .link {
-    @include linear-gradient(to bottom, #555 0%, #333 25%, #111 100%);
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), 0 0 1px 1px rgba(0, 0, 0, 0.1) inset;
-  }
-
-  :hover, .active {
-    color: white;
-    @include linear-gradient(to bottom, #222 0%, #111 30%, #000 100%);
-  }
-
-  .active {
-    cursor: default;
+    &:hover, &.active {
+      color: #C097FF;
+    }
   }
 }
