--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -110,7 +110,7 @@
     }
 
     li {
-      margin: 14px 0;
+      margin: 24px 0;
 
       &:nth-of-type(1) {
         margin-top: 0;
@@ -120,6 +120,7 @@
       }
 
       a {
+        line-height: 1;
         font-weight: bold;
         @include font-size(26px);
 
