--- a/src/apps_common/yandex_social/templates/yandex_social/social.html
+++ b/src/apps_common/yandex_social/templates/yandex_social/social.html
@@ -1,5 +1,5 @@
-<div id="social_button_{{ id }}"
-     class="social-buttons"
+<div id="yandex_social_button_{{ id }}"
+     class="yandex-social-buttons"
      data-buttons="{{ buttons }}"
      data-type="{{ type }}"
      data-theme="{{ theme }}"
