--- a/src/static/scss/slider3d/slider3d.scss
+++ b/src/static/scss/slider3d/slider3d.scss
@@ -39,10 +39,12 @@
     }
 
     &.left {
+      margin-left: 1px;
       @include transform(translate3d(-50%, -50%, -0.5em) rotateY(-90deg));
     }
 
     &.right {
+      margin-left: -1px;
       @include transform(translate3d(50%, -50%, 0.5em) rotateY(90deg));
     }
   }
