--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -52,28 +52,34 @@
             <div class="grid-col-8 grid-col-alone">
                 <div class="slider3d">
                     <div class="slider3d-wrapper">
-                        <img class="slide front" src="{% static "main/img/slider/Chrysanthemum.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Desert.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Hydrangeas.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Jellyfish.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Koala.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Lighthouse.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Penguins.jpg" %}">
-                        <img class="slide" src="{% static "main/img/slider/Tulips.jpg" %}">
+                        <img class="slide front" src="{% static 'main/img/slider/Chrysanthemum.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Desert.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Hydrangeas.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Jellyfish.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Koala.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Lighthouse.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Penguins.jpg' %}">
+                        <img class="slide" src="{% static 'main/img/slider/Tulips.jpg' %}">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     
-    {% social_share 'vk' %}
-    {% social_share 'fb' %}
-    {% social_share 'tw' %}
-    {% social_share 'gp' %}
-    {% social_share 'li' %}
-    {% social_share 'pi' %}
-    {% social_share 'sb' %}
-    {% social_share 'lj' %}
-    {% social_share 'dg' %}
+    <div id="social_buttons">
+        <div class="grid">
+            <div class="grid-col-8 grid-col-alone">
+                {% social_share 'vk' %}
+                {% social_share 'fb' %}
+                {% social_share 'tw' %}
+                {% social_share 'gp' %}
+                {% social_share 'li' %}
+                {% social_share 'pi' %}
+                {% social_share 'sb' %}
+                {% social_share 'lj' %}
+                {% social_share 'dg' %}
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
