--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% load pipeline %}
-{% load social %}
+{% load social_buttons %}
 
 {% block static_head %}
     {{ block.super }}
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    
+
     <div id="social_buttons">
         <div class="grid">
             <div class="grid-col-8 grid-col-alone">
