--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -82,4 +82,8 @@
         </div>
     </div>
 
+    <div id="social_auth">
+        <a href="{% url 'social:google_auth' %}" style="display: inline-block">Google</a>
+    </div>
+
 {% endblock content %}
