fix social auth

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -83,7 +83,8 @@
     </div>
 
     <div id="social_auth">
-        <a href="{% url 'social:google_auth' %}" style="display: inline-block">Google</a>
+        <a href="{% url 'social:google' %}" style="display: inline-block">Google</a>
+        <a href="{% url 'social:vk' %}" style="display: inline-block">VK</a>
     </div>
 
 {% endblock content %}
