--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -85,6 +85,7 @@
     <div id="social_auth">
         <a href="{% url 'social:google' %}" style="display: inline-block">Google</a>
         <a href="{% url 'social:vk' %}" style="display: inline-block">VK</a>
+        <a href="{% url 'social:facebook' %}" style="display: inline-block">Facebook</a>
     </div>
 
 {% endblock content %}
