rm grid classes

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -21,7 +21,7 @@
 
         <div class="inner">
             <div class="grid">
-                <div class="gray grid-col-wide-6 grid-col-6 grid-col-tablet-8 grid-col-mobile-4 grid-col-alone"
+                <div class="gray grid-col-wide-6 grid-col-6 grid-col-alone"
                      style="height: 200px">
                     <h1 class="title title-h1">{{ config.header_title }}</h1>
                 </div>
@@ -40,10 +40,10 @@
         <div class="parallax" style="background-image: url({% static 'main/img/background.jpeg' %})"></div>
 
         <div class="appear-block grid">
-            <div class="yellow grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
-            <div class="red grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
-            <div class="gray grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
-            <div class="orange grid-col-wide-2 grid-col-2 grid-col-tablet-4 grid-col-mobile-4"></div>
+            <div class="yellow grid-col-wide-2 grid-col-2 grid-col-tablet-4"></div>
+            <div class="red grid-col-wide-2 grid-col-2 grid-col-tablet-4"></div>
+            <div class="gray grid-col-wide-2 grid-col-2 grid-col-tablet-4"></div>
+            <div class="orange grid-col-wide-2 grid-col-2 grid-col-tablet-4"></div>
         </div>
     </div>
 
