--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -4,7 +4,7 @@
     {% seo_block %}
 
     <div class="contacts grid">
-        <div class="grid-col-8">
+        <div class="grid-col-8 grid-col-alone">
             <p class="copyright">&copy; {% now "Y" %} <a href="/" rel="nofollow">Project</a></p>
         </div>
     </div>
