--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -62,12 +62,15 @@
     width: 100%;
     height: 5px;
     background: #FFFFFF;
+    @include transition-property(-webkit-transform, transform);
+    @include transition-duration(0.75s);
   }
   &:before {
     top: 11px;
     box-shadow: #FFFFFF 0 -11px 0 0;
-    @include transition(-webkit-transform 0.75s, box-shadow 0.2s 0.1s);
-    @include transition(transform 0.75s, box-shadow 0.2s 0.1s);
+    @include transition-property(-webkit-transform, transform, box-shadow);
+    @include transition-duration(0.75s, 0.75s, 0.2s);
+    @include transition-delay(0s, 0s, 0.1s);
   }
   &:after {
     bottom: 0;
@@ -76,12 +79,14 @@
   }
 
   &.active {
+    top: -4px;
+    
     &:before {
       top: 50%;
       box-shadow: transparent 0 0 0 0;
       @include transform(translate3d(0, -50%, 0) rotate(225deg));
-      @include transition(-webkit-transform 0.75s, box-shadow 0s 0s);
-      @include transition(transform 0.75s, box-shadow 0s 0s);
+      @include transition-duration(0.75s, 0.75s, 0s);
+      @include transition-delay(0s);
     }
     &:after {
       top: 50%;
