--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -59,12 +59,17 @@
 
 #popup-close-button {
   position: absolute;
-  right: -40px;
-  top: -40px;
+  right: -55px;
+  top: -50px;
   width: 40px;
   height: 40px;
   z-index: 100;
   cursor: pointer;
+  @include transform(scale(0.8));
+  @include transform-origin(0 100%);
+  @include transition-property(-webkit-transform, transform);
+  @include transition-duration(0.2s);
+  @include transition-timing-function(ease-in);
 
   &:before, &:after {
     content: '';
@@ -73,7 +78,10 @@
     top: 50%;
     width: 100%;
     height: 5px;
-    background: #fff;
+    background: #A0A0A0;
+    @include transition-property(background);
+    @include transition-duration(0.2s);
+    @include transition-timing-function(ease-in);
   }
   &:before {
     @include transform(translate3d(0, -50%, 0) rotate(45deg));
@@ -83,7 +91,10 @@
   }
 
   &:hover {
-    background-position: left top;
+    @include transform(scale(1));
+    &:before, &:after {
+        background: #FFFFFF;
+    }
   }
 }
 
