--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -58,7 +58,7 @@
     
     <div id="slider_example">
         <div class="grid">
-            <div class="grid-col-8 grid-col-alone">
+            <div class="grid-col-full">
                 <div class="slider3d">
                     <div class="slider3d-wrapper">
                         <img class="slide front" src="{% static 'main/img/slider/Chrysanthemum.jpg' %}">
@@ -77,7 +77,7 @@
 
     <div id="social_buttons">
         <div class="grid">
-            <div class="grid-col-8 grid-col-alone">
+            <div class="grid-col-full">
                 {% social_share 'vk' %}
                 {% social_share 'fb' %}
                 {% social_share 'tw' %}
