--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -34,8 +34,9 @@
     }
   }
 
-  .grid-col-wide-8 {
+  .grid-col-wide-full {
     @extend .grid-col;
+    @extend .grid-col-alone;
     width: 100%;
   }
 }
@@ -50,8 +51,9 @@
     }
   }
 
-  .grid-col-8 {
+  .grid-col-full {
     @extend .grid-col;
+    @extend .grid-col-alone;
     width: 100%;
   }
 }
@@ -66,8 +68,9 @@
     }
   }
 
-  .grid-col-tablet-8 {
+  .grid-col-tablet-full {
     @extend .grid-col;
+    @extend .grid-col-alone;
     width: 100%;
   }
 }
@@ -82,8 +85,9 @@
     }
   }
 
-  .grid-col-mobile-4 {
+  .grid-col-mobile-full {
     @extend .grid-col;
+    @extend .grid-col-alone;
     width: 100%;
   }
 }
