--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -48,10 +48,20 @@ p {
   display: table;
   width: 100%;
   height: 100%;
-}
 
-#content {
-  display: table-row;
+  .header-wrapper {
+    display: table-row;
+    height: 0;
+  }
+
+  .content-wrapper {
+    display: table-row;
+  }
+  
+  .footer-wrapper {
+    display: table-row;
+    height: 1px;
+  }
 }
 
 // Полноэкранный блок
