--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -8,7 +8,9 @@
 
     <div class="grid">
         <div class="grid-col-full grid-col-alone">
-            <a href="mailto:{{ config.email }}" class="email">{{ config.email }}</a>
+            <div class="inner">
+                <a href="mailto:{{ config.email }}" class="email">{{ config.email }}</a>
+            </div>
         </div>
     </div>
 </div>
