--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -33,17 +33,21 @@
     {% seo_counters 'body_top' %}
 
     <div id="wrapper">
-        {% block header %}
-            {% include 'header.html' %}
-        {% endblock header %}
+        <div class="header-wrapper">
+            {% block header %}
+                {% include 'header.html' %}
+            {% endblock header %}
+        </div>
 
-        <div id="content">
+        <div class="content-wrapper">
             {% block content %}{% endblock content %}
         </div>
 
-        {% block footer %}
-            {% include 'footer.html' %}
-        {% endblock footer %}
+        <div class="footer-wrapper">
+            {% block footer %}
+                {% include 'footer.html' %}
+            {% endblock footer %}
+        </div>
     </div>
 
     {% block static_js %}
