--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,9 +7,11 @@
         </div>
 
         <div class="cell grid-col-wide-4 grid-col-4 grid-col-tablet-1 grid-col-mobile-1">
-            <span id="mobile-menu"></span>
-            <div id="main-menu">
-                {% main_menu %}
+            <div class="menu-wrapper">
+                <span id="mobile-menu"></span>
+                <div id="main-menu">
+                    {% main_menu %}
+                </div>
             </div>
         </div>
     </div>
