--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -7,7 +7,7 @@
     {% seo_block %}
 
     <div class="grid">
-        <div class="grid-col-full grid-col-alone">
+        <div class="gc-full gc-alone">
             <div class="inner">
                 <a href="mailto:{{ config.email }}" class="email">{{ config.email }}</a>
             </div>
