--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,11 +2,11 @@
 
 <div id="header">
     <div class="table grid">
-        <div class="cell grid-col-wide-2 grid-col-2 grid-col-tablet-7 grid-col-mobile-3">
+        <div class="cell gc-wide-2 gc-2 gc-tablet-7 gc-mobile-3">
             <a href="/" id="logo"></a>
         </div>
 
-        <div class="cell grid-col-wide-4 grid-col-4 grid-col-tablet-1 grid-col-mobile-1">
+        <div class="cell gc-wide-4 gc-4 gc-tablet-1 gc-mobile-1">
             <div class="menu-wrapper">
                 <span id="mobile-menu"></span>
                 <div id="main-menu">
