--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -1,5 +1,5 @@
 <div class="seo-text grid">
-    <div class="grid-col-full grid-col-alone">
+    <div class="gc-full gc-alone">
         <div class="text-wrapper {% if animated %}animated{% endif %}">
             {% if animated %}
                 <p class="text short-text">
