--- a/src/apps_common/gallery/static/gallery/scss/gallery.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery.scss
@@ -45,12 +45,9 @@
     @include no_fontsize;
 
     .gallery-button {
-      position: absolute;
-      top: 0;
       z-index: 10;
-      width: 100%;
-      height: 100%;
       cursor: pointer;
+      @include overlay;
       @include unselectable;
 
       &:hover {
@@ -92,11 +89,7 @@
     }
 
     #gallery-video-player {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      @include overlay;
     }
   }
 }
