--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -101,13 +101,9 @@
 .preloader {
   #popup-content:before {
     content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
     z-index: 1000;
     background: rgba(255, 255, 255, 0.5);
+    @include overlay;
   }
   #popup-content:after {
     content: '';
