--- a/src/static/scss/bxslider/slider.scss
+++ b/src/static/scss/bxslider/slider.scss
@@ -21,14 +21,10 @@
   }
 
   .bx-controls {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    top: 0;
     z-index: 1;
-    @include border-box;
+    @include overlay;
     @include clearfix;
+    @include border-box;
   }
 
   .bx-controls-direction {
@@ -83,14 +79,10 @@
 
   /* LOADER */
   .bx-loading {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
     min-height: 50px;
     background: url(bx_loader.gif) center center no-repeat #fff;
     z-index: 2000;
+    @include overlay;
   }
 }
 
