--- a/src/static/scss/parallax.scss
+++ b/src/static/scss/parallax.scss
@@ -1,12 +1,8 @@
 @import "mixins";
 
 .parallax {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
   z-index: 1;
   background: no-repeat center top;
   background-size: cover;
+  @include overlay;
 }
