grid_col_padding -> grid_space

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -22,16 +22,13 @@
 
         <div class="inner">
             <div class="grid">
-                <div class="gray gc-wide-6 gc-6 gc-alone"
-                     style="height: 200px">
+                <div class="gray gc-wide-6 gc-6 gc-alone gc-center" style="height: 200px">
                     <h1 class="title title-h1">{{ config.header_title }}</h1>
                 </div>
 
-                <div class="blue gc-wide-4 gc-4 gc-tablet-4 gc-mobile-2"
-                     style="height: 50px">
+                <div class="blue gc-wide-4 gc-4 gc-tablet-4 gc-mobile-2" style="height: 50px">
                 </div>
-                <div class="yellow gc-wide-4 gc-4 gc-tablet-4 gc-mobile-2"
-                     style="height: 50px">
+                <div class="yellow gc-wide-4 gc-4 gc-tablet-4 gc-mobile-2" style="height: 50px">
                 </div>
             </div>
         </div>
@@ -50,7 +47,7 @@
 
     <div id="text-content" class="text-styles">
         <div class="grid">
-            <div class="gc-wide-6 gc-6 gc-alone">
+            <div class="gc-wide-6 gc-6 gc-alone gc-center">
                 {% away config.text|typograf|safe %}
             </div>
         </div>
