--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -19,8 +19,13 @@
 
 .gc {
   min-height: 1px;
-  padding: 0 $grid_col_padding;
+  padding: 0 $grid_space;
   @include border-box;
+}
+
+.gc-center {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 $cols_wide: 8;
