--- a/src/libs/stdimage/templates/stdimage/admin_widget.html
+++ b/src/libs/stdimage/templates/stdimage/admin_widget.html
@@ -3,7 +3,10 @@
 
 <div class="stdimage">
     <div class="item-preview {% if not value %}hide{% endif %}"
-         style="width:{{ admin_variation.size.0 }}px; height:{{ admin_variation.size.1 }}px">
+         data-action="{{ admin_variation.action|default:1 }}"
+         data-size="{{ admin_variation.size|join:'x' }}"
+         data-position="{{ admin_variation.position|join:'x' }}"
+         data-source="{{ value.url_nocache }}">
         {% with variation_field=value|variation_field:admin_variation.name %}
             <img src="{{ variation_field.url_nocache }}">
         {% endwith %}
@@ -12,7 +15,7 @@
     <p class="hint">
         {% trans 'Dimensions: ' %} {% trans 'from' %} {{ min_dimensions|join:'x' }} {% trans 'to' %} {{ max_dimensions|join:'x' }}
     </p>
-    
+
     {{ input }}
 
     {% if crop_area %}
@@ -20,7 +23,6 @@
             <button class="btn"
                     data-crop_field="{{ crop_field|default:'' }}"
                     data-aspects="{{ aspects }}"
-                    data-source="{{ value.url_nocache }}"
                     data-min_dimensions="{{ min_dimensions|join:'x' }}"
                     data-max_dimensions="{{ max_dimensions|join:'x' }}">
                 {% trans 'Crop image' %}
